# universal-robots-kinematics

./: .clang-format  .clang-tidy  .coderabbit.yaml  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  KinematicsValidation.rar  LAUNCH.md  LICENSE  README.md  README_8md.html  annotated.html  build.zig  build.zig.zon  classes.html  classuniversalRobots_1_1UR-members.html  classuniversalRobots_1_1UR.html  classuniversalRobots_1_1UR__coll__graph.map  classuniversalRobots_1_1UR__coll__graph.md5  codecov.yml  dir_164b38290107aa974fdd8bec7f1a791f.html  dir_164b38290107aa974fdd8bec7f1a791f_dep.map  dir_164b38290107aa974fdd8bec7f1a791f_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  (+48 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  static-analysis.yml
CoppeliaSim/: README.md
CoppeliaSim files/: KinematicsTest.ttt  UR10.ttt  UR5.ttt  ValidationTest.ttt
CoppeliaSim files/Models/: Unigripper.ttm
CoppeliaSim files/Scenes/: KinematicsTest.ttt  UR10.ttt  UR3.ttt  UR5.ttt  ValidationTest.ttt
CoppeliaSim files/Scripts/: UR10.lua  UR3.lua  UR5.lua  main.lua
CoppeliaSim/Models/: UR10e.ttm  pedestal.stl
CoppeliaSim/Scenes/: KinematicsTest.ttt
CoppeliaSim/Scripts/: UR3.lua
Images/: 0p5.ai  8solutionsError2.ai  8solutionseError.ai  Aux_theta1.ai  Aux_theta1_2.ai  UR10.ai  UR10e.ai  UR10kinVectors.ai  URanglesDist.ai  URreferenceFrames.ai  desktop.ini  overheadJoint1.ai  proof.ai  refFramesgripper.ai  theta1.ai  theta1_old.ai  theta234.ai  theta234_v2.ai  theta4.ai  theta5.ai  theta6.ai  theta_6_.ai
MATLAB files/: GUI.mlapp  MDHMatrix.m  README.md  RPY.asv  RPY.m  cMfile.txt  cMfile.xlsx  fwdKin.m  iMfile.txt  iMfile.xlsx  invKin.m  invKin8sol.asv  invKin8sol.m  main.asv  main.m  printM.asv  printM.m  runSim.asv  runSim.m  test.m  validationTest.asv  validationTest.m
MATLAB files/MatrixOutput/: cMfile.txt  iMfile.txt
MATLAB files/ValidationOutput/: stdev - Copy.xlsx  stdev.xlsx
Resources/: .gitignore
apps/demo/: benchmarking.cpp  benchmarking.h  main.cpp
c/: urkC.h
cpp/URkinematics/: .gitignore  URkinematics.sln
cpp/URkinematics/URkinematics/: URkinematics.vcxproj
cpp/URkinematics/URkinematics/src/: main.cpp
cpp/URkinematics/universalRobotsKinematics/: universalRobotsKinematics.vcxproj
cpp/universalRobotsKinematics/: .gitignore  CMakeLists.txt  universalRobotsKinematics.sln
cpp/universalRobotsKinematics/Application/: Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt
cpp/universalRobotsKinematics/Application/src/: benchmarking.cpp  benchmarking.h  coppeliasimTests.cpp  coppeliasimTests.h  extApi.h  extApiPlatform.h  main.cpp
cpp/universalRobotsKinematics/Dependencies/CoppeliaSim/include/: license.txt  simConst.h  simLib.h  simTypes.h
cpp/universalRobotsKinematics/Dependencies/CoppeliaSim/remoteApi/: extApi.c  license.txt
cpp/universalRobotsKinematics/mathLib/: CMakeLists.txt  mathLib.vcxproj  mathLib.vcxproj.filters
cpp/universalRobotsKinematics/mathLib/src/: mathLib.cpp  mathLib.h
cpp/universalRobotsKinematics/universalRobotsKinematics/: CMakeLists.txt  universalRobotsKinematics.vcxproj  universalRobotsKinematics.vcxproj.filters
cpp/universalRobotsKinematics/universalRobotsKinematics/src/: robotParameters.h  universalRobotsKinematics.cpp  universalRobotsKinematics.h  urkC.cpp
docs/: REFERENCES.md
docs/wiki/: Benchmarking.md  CoppeliaSim-Integration.md  Getting-Started.md  Home.md  Jacobian-Theory.md  Kinematics-Theory.md  Modified-Denavit-Hartenberg-Convention.md  UR-Class-API.md
include/ur_kinematics/: robot_parameters.h  ur_kinematics.h
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  related_0.js  searchdata.js  (+8 more)
src/: math_utils.cpp  math_utils.h  ur_kinematics.cpp
tests/: CMakeLists.txt  README.md  golden_config.hpp  golden_generator.cpp  golden_load.hpp  json_mini.hpp  test_baseline_params.hpp  test_golden_fk.cpp  test_golden_ik.cpp  test_ik_selection.cpp  test_jacobian.cpp  test_math_utils.cpp  test_pose_and_fk_anchors.cpp  test_properties.cpp  test_robot_parameters.cpp  test_sanity.cpp  test_validation.cpp
tests/golden/: fk_UR10_d0.json  fk_UR10_d015.json  fk_UR3_d0.json  fk_UR3_d015.json  fk_UR5_d0.json  fk_UR5_d015.json  ik_UR10.json  ik_UR3.json  ik_UR5.json
universal-robots-kinematics/: .gitignore  CMakeLists.txt  build.bat  main.cpp
universal-robots-kinematics/include/: my_math.h  ur.h  ur_parameters.h
universal-robots-kinematics/src/: my_math.cpp  ur.cpp  ur_parameters.cpp
universal-robots-kinematics/tests/: test_math.cpp  test_ur.cpp  test_ur_parameters.cpp
zig/: c.zig  example.zig
zig/utils/: cleanup.zig  setup.zig
